Clean up across the different sites to make sure there was uniformity.

--- a/haiti-cocreation.html
+++ b/haiti-cocreation.html
@@ -32,9 +32,9 @@
                             <i class="fas fa-bars"></i>
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <div class="clearfix"></div>
-                            <!--li><a data scroll href="#projects">WORK</a></li>
-                            <li><a data scroll href="#services">SERVICES</a></li>
-                            <li><a data scroll href="#about">ABOUT</a></li-->
+                            <li><a data scroll href="#cases">WORK</a></li>
+                            <!--li><a data scroll href="#services">SERVICES</a></li-->
+                            <li><a href="index.html">ABOUT</a></li>
                             <li><a href="tools.html">TOOLS & DOODLES</a></li>
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
@@ -43,8 +43,8 @@
 
             <section class="hero">
                 <div class="hero-text">
+                    <div class="half-right" id="shake"><img src="images/afi-cover.png" style="width:80%;"></div>
                     <h1>Designing financial services to include rural Haitians</h1>
-                    <div class="bg-img" id="shake"><img src="images/afi-cover.png" style="transform: rotate(25deg);"></div>
                     <div class="half-left" style="padding: 0;">
                         <div style="padding-bottom:1rem;">DATES: July 2015 - January 2017
                             <p>MY ROLE: Strategy Lead, Proposal Manager, Client
@@ -187,10 +187,9 @@
                   <h2 style="margin-bottom: 0;">Prototype & Test</h2>
               </div>
               <div class="half-left" style="clear:both;">
-                  <h3>Reverting back to the timeline:</h3>
                   <h3><b>July-August 2015</b>: Submission of EOI that proposed 4
                     different interventions (as written in the project model canvas)
-                    <ol>
+                    <ul>
                         <li>Continue to improve the quality and availability
                           of products and services by building institutional
                           capacity and fostering innovation through private-sector
@@ -199,17 +198,24 @@
                           as well as develop their internal capacities to respond
                           to client needs through product and service development,
                           while remaining or becoming profitable;</li>
-                        <li>Leveraging and creating entrepreneurial talent in
-                          Haiti by partnering with Ecole Superieure d’Infotronique
-                          d’Haiti (ESIH) university to facilitate new ideas for
-                          meeting financial services challenges;</li>
-                        <li>Create a forum linking GOH to the industry to
-                          better understand on-the-ground realities and needs; and,</li>
-                        <li>Provide financial capacity training and tools for
-                          financial institution employees and potential borrowers
-                          in partnership with stakeholders and ongoing projects.</li>
-                    </ol></h3>
+
+
+                    </ul></h3>
               </div>
+              <div class="half-right">
+                  <h3><ul>
+                      <li>Leveraging and creating entrepreneurial talent in
+                        Haiti by partnering with Ecole Superieure d’Infotronique
+                        d’Haiti (ESIH) university to facilitate new ideas for
+                        meeting financial services challenges;</li>
+                      <li>Create a forum linking GOH to the industry to
+                        better understand on-the-ground realities and needs; and,</li>
+                      <li>Provide financial capacity training and tools for
+                        financial institution employees and potential borrowers
+                        in partnership with stakeholders and ongoing projects.</li>
+                  </ul></h3>
+              </div>
+
                   <a href="images/haiti-canvas.png"><img src="images/haiti-canvas.png" alt="haiti model canvas" style="width:100%;"></a>
               <div class="half-left" style="clear:both; padding-top: 2rem;">
                   <h3><b>December 2015</b>: 3-day workshop hosted by USAID Haiti
@@ -222,11 +228,11 @@
                     programs that complemented one another. During the workshop,
                     we held brainstorming sessions in our hotel rooms.
                     See the image with paper taped to the window.</h3>
-                    <img src="images/haiti-hotelsketch.png" alt="haiti model canvas">
               </div>
               <div class="half-right" style="padding-top: 5rem">
-                  <img src="images/haiti-openinnovation.png" alt="haiti model canvas">
-                  <img src="images/haiti-outsidesketch.png" alt="haiti model canvas">
+                  <img src="images/haiti-hotelsketch.png" alt="haiti model canvas" class="half-right" id="zoom">
+                  <img src="images/haiti-openinnovation.png" alt="haiti model canvas" class="half-left" id="zoom">
+                  <img src="images/haiti-outsidesketch.png" alt="haiti model canvas" class="half-right" style="clear:both;" id="zoom">
               </div>
               <div class="half-left" style="clear:both;">
                   <h3><b>January 2016-August 2017</b>: 5-page concept note, then
@@ -247,7 +253,8 @@
                     note of the tweaks program managers made in order to add
                     improvements to the design process. If you'd like to read
                     more on the project, this is the
-                    <a href="http://www.woccu.org/programs/current_programs/haiti/haiti_accessible_finance">
+                    <a href="http://www.woccu.org/programs/current_programs/haiti/haiti_accessible_finance"
+                    class="underline">
                     project site</a>.</h3>
               </div>
           </section>
@@ -268,8 +275,8 @@
                   <h1>Check out other case studies.</h1>
               </div>
               <div class="half-right">
-                <a href="rfs.html"><img src="images/rfs/rfs-etsy.png" class="" style="width:80%;float:right;"></a>
-                <a href="italy-fintech.html"><img src="images/fintech-paga-cover.png" class="" style="width:80%;float:right;"></a>
+                <a href="rfs.html"><img src="images/rfs/rfs-etsy.png" class="" style=""></a>
+                <a href="italy-fintech.html"><img src="images/fintech-paga-cover.png" class="" style=""></a>
 
               </div>
           </section>
