--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h3 class="half-left" style="padding: 0;">with an MBA, Innovation Certificate, and Design training. I
                       have 8+ years’ experience designing & writing proposals and
                       managing cross-functional teams. Now, I’m freelancing in design
-                      ops, business design, and marketing.</h3>
+                      ops, business design, and strategic initiatives.</h3>
                 </div>
             </section>
       </header>
@@ -58,10 +58,10 @@
                       <h2>Social Innovation</h2>
                       <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
                         financial inclusion in rural areas in Haiti.</h3>
-                      <a href="haiti-cocreation.html"><h4>See more.</h4></a>
+                      <h4><a href="haiti-cocreation.html" class="underline">See more</a>.</h4>
                   </div>
                   <div class="left-img">
-                      <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
+                      <a href="haiti-cocreation.html"><img src="images/digicellbg.png"></a>
                   </div>
               </div>
               <div class="right">
@@ -70,7 +70,7 @@
                       <h2>Digital Strategy</h2>
                       <h3 id="project-desc">Developing the customer engagement
                       strategy for an Italian fintech.</h3>
-                      <a href="italy-fintech.html"><h4>See more.</h4></a>
+                      <h4><a href="italy-fintech.html" class="underline">See more</a>.</h4>
                   </div>
               </div>
               <div class="left">
@@ -78,7 +78,7 @@
                       <h2>Brand Identity</h2>
                       <h3 id="project-desc">Designing the brand & website for a small
                         business in Washington, DC.</h3>
-                      <a href="rfs.html"><h4>See more.</h4></a>
+                      <h4><a href="rfs.html" class="underline">See more</a>.</h4>
                   </div>
                   <a href="rfs.html" class="rfs-image"><img src="images/rfs/rfs-etsy.png"></a>
           </section>
@@ -133,20 +133,20 @@
                   <div class="half-right">
                   <img src="images/face.png">
                   <h3>Career-wise, I’ve always gravitated towards challenging
-                    roles in resource-poor environments, whether it’s a very
-                    small company/ team or in a developing country. I started
+                    roles in resource-poor environments, whether it’s working on a
+                    small team or in a developing country. I started
                     my career managing international monitoring & evaluation
                     projects then moved more into business development roles
-                    because I enjoyed designing and creating the projects. At
-                    each company transition, I would take on more responsibility,
-                    and thus gain more insight into company operations. This is
+                    because I enjoyed designing and creating the projects. Each
+                     company transition, brought on more responsibility,
+                    and thus more insight into company operations. This is
                     when I started taking extra work in design ops and created
                     manuals, tools, and forms for business development and
                     internal operations.</h3>
-                  <h3>To further develop my skills in my interests, I signed up
-                    for a design bootcamp then enrolled into an MBA program in
-                    Italy. Now, I’m open for freelance or full-time opportunities
-                    in business development, business design, and/or design ops.</h3>
+                  <h3>Within the last two years, I graduated with an MBA in a top-13
+                    school (SDA Bocconi) in Italy and completed a human-centered
+                    design bootcamp. Now, I'm available for freelance or full-time opportunities
+                    in business development, business design, and/or strategy consulting.</h3>
               </div>
               </div>
           </section>
