--- a/italy-fintech.html
+++ b/italy-fintech.html
@@ -31,9 +31,9 @@
                             <i class="fas fa-bars"></i>
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <div class="clearfix"></div>
-                            <!--li><a data scroll href="#projects">WORK</a></li>
-                            <li><a data scroll href="#services">SERVICES</a></li>
-                            <li><a data scroll href="#about">ABOUT</a></li-->
+                            <li><a data scroll href="#cases">WORK</a></li>
+                            <!--li><a data scroll href="#services">SERVICES</a></li-->
+                            <li><a href="index.html">ABOUT</a></li>
                             <li><a href="tools.html">TOOLS & DOODLES</a></li>
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
@@ -289,8 +289,8 @@
                   <h1>Check out other case studies.</h1>
               </div>
               <div class="half-right">
-                  <a href="haiti-cocreation.html"><img src="images/digicellbg.png" class="" style="width:80%; float:right;"></a>
-                  <a href="rfs.html"><img src="images/rfs/rfs-etsy.png" class="" style="width:80%;float:right;"></a>
+                  <a href="haiti-cocreation.html"><img src="images/digicellbg.png" class="" style=""></a>
+                  <a href="rfs.html"><img src="images/rfs/rfs-etsy.png" class="" style=""></a>
               </div>
           </section>
       </main>
