--- a/rfs.html
+++ b/rfs.html
@@ -36,13 +36,15 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i></a>
                   <div class="clearfix"></div>
+                  <li><a data scroll href="#case">WORK</a></li>
+                  <li><a href="index.html">ABOUT</a></li>
                   <li><a href="tools.html">TOOLS & DOODLES</a></li>
                   <li><a data scroll href="#contact">CONTACT</a></li>
                   </a>
               </ul>
           </nav>
           <section class="hero">
-              <div class="half-right"><img src="images/rfs/rfs-laptop.png" style="width:100%;"></div>
+              <div class="half-right" id="shake"><img src="images/rfs/rfs-laptop.png" style="width:100%;"></div>
 
               <div class="hero-text">
                   <h1>Creating a brand identity for a shoe boutique</h1>
@@ -133,8 +135,8 @@
                           <li>What would compel them to buy this product .</li>
                           <li>And at what price point</li>
                       </ol></h3>
-                      <h3>With more than <span id="blink">130 respondents</span>, we were able to answer
-                        these questions.</h3>
+                      <h3>With more than <span id="blink">130 respondents</span>,
+                        we were able to answer these questions.</h3>
                   </div>
               </div>
 
@@ -151,9 +153,8 @@
                             <li>freelancer working from a coffee-shop</li></h3>
                         </ol>
                       <h3>Click on the images for a little more detail on two of the personas:</h3>
-
                   </div>
-                  <div class="half-right">
+                  <div class="half-right" id="cases" style="padding-top:0;">
                       <a href="images/rfs/jean-story.png"><img src="images/rfs/jeanc.png"></a>
                       <a href="images/rfs/vincent-story.png"><img src="images/rfs/vinnye.png"></a>
 
@@ -357,12 +358,12 @@
 
 
           <section id="cases">
-              <div class="half-left">
+              <div class="half-left" id="case">
                   <h1>Check out other case studies.</h1>
               </div>
               <div class="half-right">
-                  <a href="haiti-cocreation.html"><img src="images/digicellbg.png" class="" style="width:80%;float:right;"></a>
-                  <a href="italy-fintech.html"><img src="images/fintech-paga-cover.png" class="" style="width:80%;float:right;"></a>
+                  <a href="haiti-cocreation.html"><img src="images/digicellbg.png" class="" style=""></a>
+                  <a href="italy-fintech.html"><img src="images/fintech-paga-cover.png" class="" style=""></a>
               </div>
           </section>
 
