updated javascript for the nav bar in mobile

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                             <i class="fas fa-bars"></i>
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <div class="clearfix"></div>
-                            <li><a data scroll href="#projects">WORK</a></li>
-                            <li><a data scroll href="#services">SERVICES</a></li>
-                            <li><a data scroll href="#about">ABOUT</a></li>
-                            <li><a href="tools.html">TOOLS & DOODLES</a></li>
-                            <li><a data scroll href="#contact">CONTACT</a></li>
+                            <li><a data scroll href="#projects" onclick="myFunction()">WORK</a></li>
+                            <li><a data scroll href="#services" onclick="myFunction()">SERVICES</a></li>
+                            <li><a data scroll href="#about" onclick="myFunction()">ABOUT</a></li>
+                            <li><a href="tools.html" onclick="myFunction()">TOOLS & DOODLES</a></li>
+                            <li><a data scroll href="#contact" onclick="myFunction()">CONTACT</a></li>
                       </a>
                     </ul>
             </nav>
