removed tools and doodles site.

--- a/italy-fintech.html
+++ b/italy-fintech.html
@@ -34,7 +34,7 @@
                             <li><a data scroll href="#cases">WORK</a></li>
                             <!--li><a data scroll href="#services">SERVICES</a></li-->
                             <li><a href="index.html">ABOUT</a></li>
-                            <li><a href="tools.html">TOOLS & DOODLES</a></li>
+                            <!--li><a href="tools.html">TOOLS & DOODLES</a></li-->
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
                     </ul>
