--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a data scroll href="#projects" onclick="myFunction()">WORK</a></li>
                             <li><a data scroll href="#services" onclick="myFunction()">SERVICES</a></li>
                             <li><a data scroll href="#about" onclick="myFunction()">ABOUT</a></li>
-                            <li><a href="tools.html" onclick="myFunction()">TOOLS & DOODLES</a></li>
+                            <!--li><a href="tools.html" onclick="myFunction()">TOOLS & DOODLES</a></li-->
                             <li><a data scroll href="#contact" onclick="myFunction()">CONTACT</a></li>
                       </a>
                     </ul>
