--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                             <!--li><a data scroll href="#projects">WORK</a></li>
                             <li><a data scroll href="#services">SERVICES</a></li>
                             <li><a data scroll href="#about">ABOUT</a></li-->
-                            <li><a href="tools.html">TOOLS & DOODLES</a></li>
+                            <!--li><a href="tools.html">TOOLS & DOODLES</a></li-->
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
                     </ul>
