removed services description

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   </div>
                   <a href="rfs.html" class="rfs-image"><img src="images/rfs/rfs-etsy.png"></a>
           </section>
-          <section class="services" id="services">
+          <!--section class="services" id="services">
               <div class="services-text">
                   <h1>Services</h1>
                   <div class="services-wrap">
@@ -114,7 +114,7 @@
                           </div>
                   </div>
               </div>
-          </section>
+          </section-->
           <section class="about" id="about">
               <div class="about-text">
                   <div class="half-left">
