--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
             </nav>
             <section class="hero">
                 <div class="hero-text">
-                    <h1>Business Designer & Developer...</h1>
-                    <h3 class="half-left" style="padding: 0;">with an MBA, Innovation Certificate, and Design training. I
-                      have 8+ years’ experience designing & writing proposals and
-                      managing cross-functional teams. Now, I’m freelancing in design
-                      ops, business design, and strategic initiatives.</h3>
+                    <h1>Strategist passionate about the circular economy,
+                    pedestrian-friendly streets, and accessibility.</h1>
+                    <h3 class="half-left" style="padding: 0;"></h3>
                 </div>
             </section>
       </header>
