Updated project CSS to remove skew.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <div class="clearfix"></div>
                             <li><a data scroll href="#projects" onclick="myFunction()">WORK</a></li>
-                            <li><a data scroll href="#services" onclick="myFunction()">SERVICES</a></li>
+                            <!--li><a data scroll href="#services" onclick="myFunction()">SERVICES</a></li-->
                             <li><a data scroll href="#about" onclick="myFunction()">ABOUT</a></li>
                             <!--li><a href="tools.html" onclick="myFunction()">TOOLS & DOODLES</a></li-->
                             <li><a data scroll href="#contact" onclick="myFunction()">CONTACT</a></li>
