updated about text.

--- a/index.html
+++ b/index.html
@@ -116,35 +116,34 @@
           <section class="about" id="about">
               <div class="about-text">
                   <div class="half-left">
-                      <h1>Business designer & developer shuffling between NYC & DC.</h1>
-                      <h3>My name is Gulbahar Okuyan, but call me Rose. </h3>
-                      <h3>Born to a Turkistan-American family, I have always been
-                        surrounded by rich, competing cultures. I grew up in Brooklyn
-                        and NJ to a mixture of nomadic ancestry, with farmer and
-                        engineer grandparents, and an architect/ framer father and
-                        artistic mother. All their traits rubbed off on me. I have
-                        lived in 3 countries and traveled to more than 25. And am
-                        constantly redecorating or moving apartments. I enjoy change
-                        and trying new things.</h3>
+                      <h1>Strategist based in DC.</h1>
+                      <h3>My name is Gulbahar Okuyan, but call me Rose. Born to a Turkistan-American
+                        family, I've always been
+                        surrounded by rich, competing cultures. Growing up with a
+                        mixture of nomadic ancestry with farmer and
+                        engineer grandparents and an architect-trained father and
+                        artistic mother, I enjoy facing new challenges and learning new things.
+                        I have lived in 3 countries and traveled to more than 25 and am
+                        constantly redecorating or moving apartments.</h3>
                       <img src="images/translation.png">
                   </div>
                   <div class="half-right">
                   <img src="images/face.png">
-                  <h3>Career-wise, I’ve always gravitated towards challenging
+                  <h3>I'm currently the senior new business manager at IESC, a
+                    nonprofit consulting firm working on small business development.
+                    I’ve always gravitated towards challenging
                     roles in resource-poor environments, whether it’s working on a
-                    small team or in a developing country. I started
+                    small team or in social innovation. I started
                     my career managing international monitoring & evaluation
-                    projects then moved more into business development roles
-                    because I enjoyed designing and creating the projects. Each
-                     company transition, brought on more responsibility,
+                    projects, then moved into business development roles, focusing on
+                    strategy and project design and development. Each
+                    company transition, brought on more responsibility,
                     and thus more insight into company operations. This is
                     when I started taking extra work in design ops and created
                     manuals, tools, and forms for business development and
                     internal operations.</h3>
-                  <h3>Within the last two years, I graduated with an MBA in a top-13
-                    school (SDA Bocconi) in Italy and completed a human-centered
-                    design bootcamp. Now, I'm available for freelance or full-time opportunities
-                    in business development, business design, and/or strategy consulting.</h3>
+                  <h3>I have an MBA in a top-13 from SDA Bocconi (Milan, Italy) and
+                    certifications/coursework in strategy, innovation, and design thinking. </h3>
               </div>
               </div>
           </section>
@@ -167,7 +166,7 @@
                       </ul>
                   </div>
                   <div class="half-right">
-                      <p>content and design &copy 2019 Gulbahar Okuyan-Waugh</p>
+                      <p>content and design &copy 2020 Gulbahar Okuyan-Waugh</p>
                   </div>
               </div>
           </div>
