removed project images

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             </nav>
             <section class="hero">
                 <div class="hero-text">
-                    <h1>Strategist passionate about the circular economy,
-                    pedestrian-friendly streets, and accessibility.</h1>
+                    <h1>Strategist passionate about inclusivity and accessibility.</h1>
                     <h3 class="half-left" style="padding: 0;"></h3>
                 </div>
             </section>
@@ -52,33 +51,33 @@
           <section class="projects" id="projects">
             <div class="clearfix"></div>
               <div class="left">
-                  <div class="left-text">
+                  <div class="left-text"><a href="haiti-cocreation.html">
                       <h2>Social Innovation</h2>
                       <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
                         financial inclusion in rural areas in Haiti.</h3>
                       <h4><a href="haiti-cocreation.html" class="underline">See more</a>.</h4>
                   </div>
                   <div class="left-img">
-                      <a href="haiti-cocreation.html"><img src="images/digicellbg.png"></a>
+                      <!--a href="haiti-cocreation.html"><img src="images/digicellbg.png"--></a>
                   </div>
               </div>
-              <div class="right">
-                  <a href="italy-fintech.html" class="rfs-image"><img src="images/fintech-paga-cover.png"></a>
+              <a href="italy-fintech.html"><div class="right">
+                  <a href="italy-fintech.html" class="rfs-image"><!--img src="images/fintech-paga-cover.png"></a-->
                   <div class="right-text">
                       <h2>Digital Strategy</h2>
                       <h3 id="project-desc">Developing the customer engagement
                       strategy for an Italian fintech.</h3>
                       <h4><a href="italy-fintech.html" class="underline">See more</a>.</h4>
-                  </div>
+                  </div></a>
               </div>
               <div class="left">
-                  <div class="left-text">
+                  <div class="left-text"><a href="rfs.html">
                       <h2>Brand Identity</h2>
                       <h3 id="project-desc">Designing the brand & website for a small
                         business in Washington, DC.</h3>
                       <h4><a href="rfs.html" class="underline">See more</a>.</h4>
                   </div>
-                  <a href="rfs.html" class="rfs-image"><img src="images/rfs/rfs-etsy.png"></a>
+                  <!--a href="rfs.html" class="rfs-image"><img src="images/rfs/rfs-etsy.png"--></a>
           </section>
           <!--section class="services" id="services">
               <div class="services-text">
@@ -136,13 +135,8 @@
                     small team or in social innovation. I started
                     my career managing international monitoring & evaluation
                     projects, then moved into business development roles, focusing on
-                    strategy and project design and development. Each
-                    company transition, brought on more responsibility,
-                    and thus more insight into company operations. This is
-                    when I started taking extra work in design ops and created
-                    manuals, tools, and forms for business development and
-                    internal operations.</h3>
-                  <h3>I have an MBA in a top-13 from SDA Bocconi (Milan, Italy) and
+                    strategy and project design and development.</h3>
+                  <h3>I have an MBA from SDA Bocconi and
                     certifications/coursework in strategy, innovation, and design thinking. </h3>
               </div>
               </div>
