rewrote about me section and removed one image. changed layout to the right side.

--- a/index.html
+++ b/index.html
@@ -114,30 +114,19 @@
           </section-->
           <section class="about" id="about">
               <div class="about-text">
-                  <div class="half-left">
-                      <h1>Strategist based in DC.</h1>
-                      <h3>My name is Gulbahar Okuyan, but call me Rose. Born to a Turkistan-American
-                        family, I've always been
-                        surrounded by rich, competing cultures. Growing up with a
-                        mixture of nomadic ancestry with farmer and
-                        engineer grandparents and an architect-trained father and
-                        artistic mother, I enjoy facing new challenges and learning new things.
-                        I have lived in 3 countries and traveled to more than 25 and am
-                        constantly redecorating or moving apartments.</h3>
-                      <img src="images/translation.png">
-                  </div>
                   <div class="half-right">
-                  <img src="images/face.png">
-                  <h3>I'm currently the senior new business manager at IESC, a
-                    nonprofit consulting firm working on small business development.
-                    I’ve always gravitated towards challenging
-                    roles in resource-poor environments, whether it’s working on a
-                    small team or in social innovation. I started
-                    my career managing international monitoring & evaluation
-                    projects, then moved into business development roles, focusing on
-                    strategy and project design and development.</h3>
-                  <h3>I have an MBA from SDA Bocconi and
-                    certifications/coursework in strategy, innovation, and design thinking. </h3>
+                      <h2>Based in DC.</h2><img src="images/face.png">
+                      <h3>I’m a strategist with more than 9 years of experience managing the design process for program development.
+                        I also have experience applying the same process management approaches to digital and physical products in tech mobility and branding.</h3>
+                      <h3>Born as Gulbahar Okuyan to a Turkish family in Brooklyn, I’ve grown up surrounded and inspired by art, architecture, and design. My house was always filled with color and Ottoman-inspired textiles. My name, Gulbahar was inspired by Ottoman times, translating into spring rose, and even led me to draw the Ottoman-style rose on this page. I enjoy embracing culture, whether it’s mine or yours and love traveling and experience new challenges – I’ve lived in three countries and have traveled to more than 25. Including a year in Milan for my MBA.</h3>
+                      <h3>I’m curious about people and their motivations and am drawn into roles where I can learn more. As a senior new business manager at an international nonprofit, my role is to respond to challenges in emerging economies, such as “how might we introduce housing finance in Haiti”, or “how might we increase consumer confidence in digital financial services in the Philippines”. I lead user research and strategy development, while managing project budgeting, indicator selection and target setting, and writing. Check out my LinkedIn for more details on my past roles. </h3>
+                  </div>
+                  <div class="half-left">
+
+
+                  </div>
+
+
               </div>
               </div>
           </section>
